# video-logging

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  logging_client_demo  logging_server  receive_from_rio_template  receive_from_rio_template.cpp
logging-server/: CMakeLists.txt  client  client.cpp  config.json  dump.csv  logging_client_demo.cpp  logging_server.cpp  receive_from_rio_template.cpp  server  server.cpp
tiling/: CMakeLists.txt  tilingtemplate  tilingtemplate.cpp
video-tiling/: CMakeLists.txt  render  render.cpp
